crates/ee-tests/src/snapshots/revm_ee_tests__eip8037__eip8037_call_new_account.snap
---
source: crates/ee-tests/src/eip8037.rs
expression: "&(baseline_result, result)"
---
[
  {
    "Success": {
      "reason": "Stop",
      "gas": {
        "gas_spent": 33022,
        "state_gas_spent": 0,
        "gas_refunded": 0,
        "floor_gas": 12000
      },
      "logs": [
        {
          "address": "0xfffffffffffffffffffffffffffffffffffffffe",
          "data": "0x0000000000000000000000000000000000000000000000000000000000000001",
          "topics": [
            "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
            "0x000000000000000000000000ffffffffffffffffffffffffffffffffffffffff",
            "0x000000000000000000000000d000000000000000000000000000000000000001"
          ]
        }
      ],
      "output": {
        "Call": "0x"
      }
    }
  },
  {
    "Success": {
      "reason": "Stop",
      "gas": {
        "gas_spent": 283022,
        "state_gas_spent": 250000,
        "gas_refunded": 0,
        "floor_gas": 12000
      },
      "logs": [
        {
          "address": "0xfffffffffffffffffffffffffffffffffffffffe",
          "data": "0x0000000000000000000000000000000000000000000000000000000000000001",
          "topics": [
            "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
            "0x000000000000000000000000ffffffffffffffffffffffffffffffffffffffff",
            "0x000000000000000000000000d000000000000000000000000000000000000001"
          ]
        }
      ],
      "output": {
        "Call": "0x"
      }
    }
  }
]
