crates/ee-tests/src/snapshots/revm_ee_tests__eip8037__eip8037_create_child_propagates.snap
---
source: crates/ee-tests/src/eip8037.rs
expression: "&(baseline_result, result)"
---
[
  {
    "Success": {
      "reason": "Stop",
      "gas": {
        "gas_spent": 45221,
        "state_gas_spent": 0,
        "gas_refunded": 0,
        "floor_gas": 12000
      },
      "logs": [],
      "output": {
        "Call": "0x"
      }
    }
  },
  {
    "Success": {
      "reason": "Stop",
      "gas": {
        "gas_spent": 576227,
        "state_gas_spent": 531000,
        "gas_refunded": 0,
        "floor_gas": 12000
      },
      "logs": [],
      "output": {
        "Call": "0x"
      }
    }
  }
]
