crates/ee-tests/src/snapshots/revm_ee_tests__eip8037__eip8037_create_empty_code.snap
---
source: crates/ee-tests/src/eip8037.rs
expression: "&(baseline_result, result)"
---
[
  {
    "Success": {
      "reason": "Stop",
      "gas": {
        "gas_spent": 33067,
        "state_gas_spent": 0,
        "gas_refunded": 0,
        "floor_gas": 12000
      },
      "logs": [],
      "output": {
        "Call": "0x"
      }
    }
  },
  {
    "Success": {
      "reason": "Stop",
      "gas": {
        "gas_spent": 363067,
        "state_gas_spent": 330000,
        "gas_refunded": 0,
        "floor_gas": 12000
      },
      "logs": [],
      "output": {
        "Call": "0x"
      }
    }
  }
]
